src/objects/Journey__c.object
<CustomObject>
    <description>We are going to use this object as Sales Journey of the user. Which begins when a person shows interest in one of our products or we decide to reach out to show our products.</description>
    <fields>
        <fullName>Building_Interested_In__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Building Interested In</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Details of Lead Source from where Tour was booked. e.g. specific form of the website.</description>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Source of the Tour, how it was booked. Lead_Source__c.</description>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>WeWork.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeLive.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Reason why we lost the journey</description>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fake Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrelated to Sales Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Be&apos;er Sheva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berkeley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herzliya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hing Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tel Aviv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wahington, D.C.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( Primary_Contact__r.MobilePhone &lt;&gt; null, 
HYPERLINK(&quot;javascript:sendCTIMessage(&apos;/CLICK_TO_DIAL?DN=&apos;+encodeURIComponent(&apos;&quot; + Primary_Contact__r.MobilePhone + &quot;&apos;)+&apos;&amp;ID=&quot;+Id+&quot;&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME=&apos;+encodeURIComponent(&apos;&quot;+ Primary_Contact__r.LastName +&quot;&apos;)+&apos;&amp;DISPLAY_NAME=&apos;+encodeURIComponent(&apos;Contact&apos;))&quot;,  Primary_Contact__r.MobilePhone + IMAGE(&apos;/img/btn_dial_inline.gif&apos;, &apos;&apos;)), &apos;&apos;)</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMD_Next_Contact_Date__c</fullName>
        <description>Date on which Journey Primary Member should be next contacted on.

This is key to manage the reminders for the Journey.</description>
        <label>Next Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF(Primary_Contact__c &lt;&gt; null, IF( Primary_Contact__r.Phone  &lt;&gt; null, 
HYPERLINK(&quot;javascript:sendCTIMessage(&apos;/CLICK_TO_DIAL?DN=&apos;+encodeURIComponent(&apos;&quot; + Primary_Contact__r.Phone + &quot;&apos;)+&apos;&amp;ID=&quot;+Id+&quot;&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME=&apos;+encodeURIComponent(&apos;&quot;+ Primary_Contact__r.LastName +&quot;&apos;)+&apos;&amp;DISPLAY_NAME=&apos;+encodeURIComponent(&apos;Contact&apos;))&quot; , Primary_Contact__r.Phone +  IMAGE(&apos;/img/btn_dial_inline.gif&apos;, &apos;&apos;) ), &apos;&apos;),IF( Primary_Lead__r.Phone  &lt;&gt; null, 
HYPERLINK(&quot;javascript:sendCTIMessage(&apos;/CLICK_TO_DIAL?DN=&apos;+encodeURIComponent(&apos;&quot; + Primary_Lead__r.Phone + &quot;&apos;)+&apos;&amp;ID=&quot;+Id+&quot;&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME=&apos;+encodeURIComponent(&apos;&quot;+ Primary_Lead__r.LastName +&quot;&apos;)+&apos;&amp;DISPLAY_NAME=&apos;+encodeURIComponent(&apos;Lead&apos;))&quot; , Primary_Lead__r.Phone +  IMAGE(&apos;/img/btn_dial_inline.gif&apos;, &apos;&apos;) ), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Contact of the Journey</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If journey is for a Lead this will be the Primary Lead. Only Primary Contact or Primary Lead can be specified not both.</description>
        <label>Primary Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journeys (Referrer)</relationshipLabel>
        <relationshipName>Journeys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <description>Stage Number of current Stage, This is how we can determine where in the Journey Customer is.</description>
        <formula>CASE(TEXT(Stage__c),
&quot;Started&quot;,1.0,
&quot;Tour Booked&quot;, 10.0,
&quot;Tour Completed&quot;, 50.0,
&quot;Waitlisted&quot;, 70.0,
&quot;Completed-Lost&quot;, 100.0,
&quot;Completed-Won&quot;, 100.0,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the Journey, which will tell us the maximum progress the customer has made.

It will not give us latest Stage but will give maximum stage that is if the journey is completed or lost, or if it is stuck in waitlist.</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tour Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tour Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed-Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Globally Unique Identifier of the record used by all systems at WeWork</description>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_campaign_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Journey</label>
    <listViews>
        <fullName>Created_Today_Journey</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NMD_Next_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Started</value>
        </filters>
        <label>Journey Created Today</label>
    </listViews>
    <listViews>
        <fullName>My_Due_or_Overdue_Today</fullName>
        <columns>NAME</columns>
        <columns>NMD_Next_Contact_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Phone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NMD_Next_Contact_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Started</value>
        </filters>
        <label>My Due or Overdue Today</label>
    </listViews>
    <nameField>
        <label>Customer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Either_Contact_or_Lead_exist_on_Journey</fullName>
        <active>true</active>
        <description>Rule for Journey should not be related to a Contact as well as Lead at a same time.</description>
        <errorConditionFormula>NOT(OR(AND((Primary_Contact__c != null),(Primary_Lead__c == null)),AND((Primary_Contact__c == null),(Primary_Lead__c != null)),AND((Primary_Contact__c == null),(Primary_Lead__c == null))))</errorConditionFormula>
        <errorMessage>Either a Primary Contact or Primary Lead can be associated with a journey at the same time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Lost_Reason_field_required</fullName>
        <active>true</active>
        <description>When a user changes the Stage value of the Journey to &quot;Completed-Lost&quot; then &quot;Lost Reason&quot; Field should be required while saving the record.</description>
        <errorConditionFormula>IF( AND( TEXT( Stage__c ) = &quot;Completed-Lost&quot;, TEXT( Lost_Reason__c )= &quot;&quot;),True,False)</errorConditionFormula>
        <errorMessage>Lost Reason field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_specify_Primary_Contact_or_Lead</fullName>
        <active>true</active>
        <description>Rule for check either of the lookup field (Primary Contact / Primary Lead) is updated on the Journey record.</description>
        <errorConditionFormula>AND((Primary_Contact__c == null),(Primary_Lead__c == null))</errorConditionFormula>
        <errorMessage>Please select either a Primary Contact or a Primary Lead for the journey record</errorMessage>
    </validationRules>
</CustomObject>